# remote-cpp-demos

./: LICENSE
simple-grpc/: README.md  client.cc  meson.build  music_storage.proto  server.cc  shell.nix  state.h  types.h
simple-soap/: .gitignore  README.md  format.sh  settings.gradle
simple-soap/client/: build.gradle
simple-soap/client/src/main/java/simple/client/: App.java
simple-soap/client/src/main/java/simple/soapcast/: CastSong.java  CastStorage.java
simple-soap/client/src/test/java/simple/: AppTest.java
simple-soap/model/: build.gradle
simple-soap/model/src/main/java/simple/model/: Song.java  Storage.java
simple-soap/model/src/test/java/capyfile/rmi/: MessageTest.java
simple-soap/server/: build.gradle
simple-soap/server/src/main/java/simple/server/: App.java
simple-soap/server/src/main/java/simple/server/soap/: SampleService.java  SampleServiceImp.java
simple-socket/: .gitignore  Makefile  client.cpp  client.h  config.h  myclient.cpp  myserver.cpp  server.cpp  server.h
simple-socket/packet/: packets.cpp  packets.h  type_serializers.cpp  type_serializers.h  types.h
threaded-doc-to-pdf/: cli.cpp  cli.h  main.cpp  pdf.cpp  pdf.h  run_test.sh  shell.nix  worker.cpp  worker.h
threaded-doc-to-pdf/samples/: calc_sample.xlsx  impress_sample.pptx  writer_sample.docx
threaded-url-to-pdf/: .gitignore  main.cpp  meson.build  pdf.cpp  pdf.h  shell.nix  test_100_urls.sh  worker.cpp  worker.h
